<resources>


    <!-- General Strings -->
    <string name="app_name">SmartBook for LoL</string>
    <string name="app_version">1.0.0</string>
    <string name="copyright">Copyright 2017 - JancoBH</string>
    <string name="developed_by">Developed by Janco Boscan</string>
    <string name="video">video</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Write Something</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="question_mark">\?\?\?</string>

    <!-- Champions Strings -->

    <string name="startingItems">Starting Items</string>
    <string name="essentialItems">Essential Items</string>
    <string name="offensiveItems">Offensive Items</string>
    <string name="deffensiveItems">Defensive Items</string>
    <string name="noChampFound">Champion not found</string>
    <string name="searchHint">Search Hint</string>

    <!-- Items Strings -->
    <string name="explanation">Explanation</string>
    <string name="itemFrom">Other Items Necessary To Build That Item</string>
    <string name="noTo">This item cannot be upgraded into another item.</string>
    <string name="itemTo">Other Items That This Item Can Be Upgraded To</string>
    <string name="noFrom">There are no items to build this item.</string>
    <string name="itemSearchHint">Enter an item name…</string>

    <string name="general">Overview</string>
    <string name="abilities">Abilities</string>
    <string name="legend">Legend</string>
    <string name="strategy">Strategy</string>
    <string name="skins">Skins</string>
    <string name="tags">Properties</string>
    <string name="mage">Mage</string>
    <string name="fighter">Fighter</string>
    <string name="assasin">Assassin</string>
    <string name="tank">Tank</string>
    <string name="marksman">Marksman</string>
    <string name="support">Support</string>
    <string name="buyucu">Mage</string>
    <string name="dovuscu">Fighter</string>
    <string name="suikastci">Assassin</string>
    <string name="nisanci">Marksman</string>
    <string name="destek">Support</string>

    <string name="action_settings">Settings</string>
    <string name="networkError">Please check your Internet connection.</string>
    <string name="loading">Loading…</string>

    <string name="collapsing_toolbar_fragment_title">Welcome</string>
    <string name="tab_fragment_title">TAB</string>
    <string name="about_fragment_title">About</string>
    <string name="champions_fragment_title">Champions</string>
    <string name="items_fragment_title">Items</string>
    <string name="summoner_fragment_title">Summoner</string>
    <string name="match_fragment_title">Match</string>
    <string name="runes_fragment_title">Runes</string>


    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>

    <string name="title_input_hint">Title</string>
    <string name="content_input_hint">Content</string>

    <string name="dialog_title">Add item</string>
    <string name="gold">Gold</string>
    <string name="passive">Passive</string>
    <string name="no_video_found">No video found.</string>

    <string name="edittext_error">Can\'t be empty</string>
    <string name="titletext_error">Title can\'t be empty</string>
    <string name="contenttext_error">Content can\'t be empty</string>
    <string name="title_content_error">Title &#038; Content can\'t be empty</string>
    <string name="text_success">Item added</string>
    <string name="text_undo">UNDO</string>

    <!-- About Section Strings -->
    <string name="text_about">SmartBook for League of Legends is the most comprehensive LoL guide and offers everything that
        a fan of this game needs.
        \n\nCheck out my instagram account at http://instagram.com/jancobh
    \n\nFind more about me on LinkedIn at https://www.linkedin.com/in/jancobh</string>
    <string name="text_ads">Please click on the ads to support further developments.
        \n\nAds will only redirect you to Google Play Store.</string>
    <string name="title_activity_activities">activities</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>

    <string name="itemDetail">Item Detail</string>
    <string name="anErrorOccured">A connection error occurred. Please try again.</string>
    <string name="filter">Filter</string>
    <string name="title_activity_champion_detail">ChampionDetailActivity</string>

    <string name="games_played">Games Played</string>
    <string name="games_won">Games Won</string>

    <string name="kill_death">Kills/Deaths</string>
    <string name="kills">Kills</string>
    <string name="deaths">Deaths</string>
    <string name="assists">Assits</string>
    <string name="penta_kills">Penta Kills</string>
    <string name="quadra_kills">Quadra Kills</string>
    <string name="triple_kills">Triple Kills</string>
    <string name="double_kills">Double Kills</string>
    <string name="killing_sprees">Killing Sprees</string>
    <string name="most_kills_per_session">Most Kills</string>
    <string name="most_deaths">Most Deaths</string>

    <string name="earnings">Earnings</string>
    <string name="gold_earned">Gold Earned</string>
    <string name="minions_killed">Minions Killed</string>
    <string name="neutral_minions_killed">Neutral Minions Killed</string>

    <string name="damagePart">Damage</string>
    <string name="damage_taken">Total Damage Taken</string>
    <string name="damage_dealt">Damage Dealt</string>
    <string name="physical_damage_dealt">Physical Damage Dealt</string>
    <string name="magic_damage_dealt">Magic Damage Dealt</string>
    <string name="healing_done">Healing Done</string>

    <string name="pleaseEnterSummonerName">Please enter a summoner name.</string>
    <string name="pleaseSelectYourRegion">Please select your region.</string>
    <string name="region">Region:</string>
    <string name="cannot_find_username">Could not find the user, please make sure you entered
        summoner name and region correctly
    </string>


    <string name="overview">OVERVIEW</string>
    <string name="match_history">MATCH HISTORY</string>
    <string name="champions">CHAMPIONS</string>
    <string name="statistics">STATISTICS</string>


    <string name="summoners_rift">Summoner\'s Rift</string>
    <string name="aram">Howling Abyss</string>
    <string name="dominion">Crystal Scar</string>
    <string name="oneforall">One For All</string>
    <string name="kingporo">King Poro</string>
    <string name="ascension">Ascension</string>
    <string name="firstblood">First Blood</string>
    <string name="tutorial">Tutorial</string>
    <string name="custom_game">Custom Game</string>
    <string name="assassinate">Hunt of the Blood Moon</string>

    <!-- Game Modes -->

    <string name="none">Custom Game</string>
    <string name="normal">Normal</string>
    <string name="odin">Dominion</string>
    <string name="aram_aram">ARAM</string>
    <string name="ranked">Ranked Game</string>
    <string name="sr6">6 vs. 6</string>
    <string name="cap5">Team Builder</string>
    <string name="urf">Ultra Rapid Fire</string>
    <string name="nightmare">Nightmare Bot</string>
    <string name="counter_pick">Counter Pick</string>
    <string name="bilgewater">Bilgewater</string>
    <string name="bot">Game Against AI</string>
    <string name="unknown">Unknown</string>

    <string name="largest_critical_strike">Largest Critical Strike</string>

    <string name="totalDamageDealt">Total Damage Dealt</string>
    <string name="totalDamageTaken">Total Damage Taken</string>
    <string name="goldEarned">Gold Earned</string>
    <string name="totalHeal">Total Heal</string>
    <string name="lagestKillingSpree">Largest Killing Spree</string>
    <string name="largestMultiKill">Largest MultiKill</string>
    <string name="magicDamageDealtPlayer">Magic Damage Dealt</string>
    <string name="physicalDamageDealtPlayer">Physical Damage Dealt</string>
    <string name="minionsKilled">Minions Killed</string>
    <string name="neutralMinionsKilled">Neutral Minions Killed</string>
    <string name="magicDamageTaken">Magic Damage Taken</string>
    <string name="physicalDamageTaken">Physical Damage Taken</string>
    <string name="totalTimeCrowdControlDealt">Total Time Crowd Control Dealt</string>
    <string name="turretsKilled">Turrets Killed</string>
    <string name="wardPlaced">Ward Placed</string>
    <string name="wardKilled">Ward Killed</string>
    <string name="ipEarned">Ip Earned</string>


    <string name="league">League</string>
    <string name="lvl">Lvl.</string>
    <string name="wonMatchCount">Number of Matches Won:</string>
    <string name="player">Summoner:</string>
    <string name="chosenChampion">Champion:</string>
    <string name="playerNotCurrentlyPlaying">This summoner is not currently in a game.</string>


    <string name="rankedStats">Ranked Stats</string>
    <string name="no_ranked_info">No ranked game info found for the summoner.</string>


    <string name="team1">TEAM 1</string>
    <string name="team2">TEAM 2</string>

    <string name="matchInfo">Match Info</string>
    <string name="matchTime">Match Time</string>


    <string name="enter_username">Enter summoner name …</string>
    <string name="if_you_wanna_change_region">*Summoner will be searched within selected region. You can change region from settings page.</string>
    <string name="recentSearches">Recent Searches</string>

    <string name="average">Averages</string>
    <string name="minions">Minions</string>
    <string name="winrate">Win Rate</string>
    <string name="mostPlayed">Most Played</string>
    <string name="team55">Team 5v5</string>
    <string name="team33">Team 3v3</string>
    <string name="kda">KDA</string>
    <string name="solo_duo">Solo/Duo</string>
    <string name="unranked">UNRANKED</string>

    <string name="playerDetail">Summoner Detail</string>
    <string name="matchHistory">Match History</string>

    <!-- -->

    <string name="defence">Defence</string>
    <string name="attack">Attack</string>
    <string name="magic">Magic</string>
    <string name="health">Health</string>
    <string name="magic_resistance">Magic Resistance</string>
    <string name="health_regeneration">Health Regeneration</string>
    <string name="damage">Physical Damage</string>
    <string name="critical">Critical Damage</string>
    <string name="attack_speed">Attack Speed</string>
    <string name="life_steal">Life Steal</string>
    <string name="armor_penetration">Armor Penetration</string>
    <string name="spell_damage">Spell Damage</string>
    <string name="cooldown_reduction">Cooldown Reduction</string>
    <string name="mana">Mana</string>
    <string name="mana_reg">Mana Regeneration</string>
    <string name="magic_penet">Magic Penetration</string>
    <string name="spell_vamp">Spell Vamp</string>
    <string name="vision">Vision</string>
    <string name="movement">Movement Speed</string>
    <string name="Consumable">Consumable</string>
    <string name="gold_give">Gold</string>
    <string name="others">Others</string>
    <string name="armor">Armor</string>

    <string name="leagueInfo">League Info</string>
    <string name="searchC">SEARCH</string>
    <string name="search">SEARCH</string>
    <string name="summonerName">Enter summoner name…</string>
    <string name="selectRegion">Choose Region:</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
