<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigation_menu">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/item_collapsing_toolbar"
            android:title="@string/collapsing_toolbar_fragment_title"
            android:checked="true"
            android:icon="@mipmap/ic_welcome"/>
        <item
            android:id="@+id/item_champions"
            android:title="@string/champions_fragment_title"
            android:icon="@mipmap/ic_swallow"/>
        <item
            android:id="@+id/item_items"
            android:title="@string/items_fragment_title"
            android:icon="@mipmap/ic_cash"/>
        <item
            android:id="@+id/item_summoner"
            android:title="Summoner"
            android:icon="@mipmap/ic_ifrit"/>
        <item
            android:id="@+id/item_match"
            android:title="Match"
            android:icon="@mipmap/ic_crossed_swords"/>
        <item
            android:id="@+id/item_runes"
            android:title="Runes"
            android:icon="@mipmap/ic_artificial_hive"/>

        <item
            android:id="@+id/item_about"
            android:title="@string/about_fragment_title"
            android:icon="@mipmap/ic_about"/>

        <item
            android:id="@+id/item_settings"
            android:title="Settings"
            android:icon="@mipmap/ic_settings"/>
    </group>

</menu>