<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/match_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/match_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/img_view" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/parentBG"
            android:contentDescription="@string/app_name" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/searchTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/searchC"
                    android:textColor="@color/accent"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    style="?android:attr/listSeparatorTextViewStyle"/>

                <EditText
                    android:id="@+id/summonerNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/searchTitle"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:hint="@string/summonerName"/>

                <TextView
                    android:id="@+id/selectRegionTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/selectRegion"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_alignBottom="@+id/regionSpinner"
                    android:layout_alignTop="@+id/regionSpinner"
                    android:gravity="center_vertical"
                    android:layout_below="@+id/summonerNameET"/>

                <Spinner
                    android:id="@+id/regionSpinner"
                    android:layout_toRightOf="@+id/selectRegionTV"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/summonerNameET"
                    android:layout_width="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/img_view"
                    android:backgroundTint="@color/accent">

                </Spinner>

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/selectRegionTV"
                    android:background="@color/accent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@android:color/white"
                    android:text="@string/search"/>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</LinearLayout>