<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_height="55dp"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize" >

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matchInfo"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/backButton"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"/>

    </RelativeLayout>
    <ProgressBar
        android:id="@+id/loadingProgress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"/>

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/matchTimeTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/matchTime"
                android:gravity="center_horizontal"
                android:textColor="@color/accent"/>
            <TextView
                android:layout_below="@+id/matchTimeTV"
                android:id="@+id/matchTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"/>

            <TextView
                android:layout_below="@+id/matchTime"
                android:id="@+id/team1TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/accent"
                />

            <ListView
                android:id="@+id/team1LV"
                android:layout_below="@+id/team1TV"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/team2TV"
                android:layout_below="@+id/team1LV"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team2"
                android:textColor="@color/accent"
                />

            <ListView
                android:id="@+id/team2LV"
                android:layout_below="@+id/team2TV"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>