<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/items_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="@dimen/toolbar_elevation"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewItemImage"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name" />

            <RelativeLayout
                android:id="@+id/relativeLayoutTitleContainer"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/imageViewItemImage"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/accent"/>

                <TextView
                    android:id="@+id/textViewItemGold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewItemName"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewItemImage"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/accent"
                android:textStyle="bold"
                android:text="@string/explanation"/>

            <View
                android:id="@+id/separator1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/textViewDescription"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/accent"/>

            <TextView
                android:id="@+id/textViewDetailedDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separator1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/itemFromText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itemFrom"
                android:layout_below="@+id/textViewDetailedDescription"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/accent"
                android:textStyle="bold"/>

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/itemFromText"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/accent"/>

            <LinearLayout
                android:id="@+id/buildFromLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separator2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/noFromTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/noFrom"
                    android:textColor="@color/white"/>


            </LinearLayout>

            <TextView
                android:id="@+id/itemToText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/itemTo"
                android:layout_below="@+id/buildFromLL"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/accent"
                android:textStyle="bold"/>

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/itemToText"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/accent"/>

            <LinearLayout
                android:id="@+id/buildToLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/separator3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/noToTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/noTo"
                    android:textColor="@color/white"/>


            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>
